Sat Sep  5 10:38:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): &&= and ||= should return rhs.
	  [ruby-dev:39163] (#1996), [ruby-core:25143]

Sat Sep  5 08:51:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (update_char_offset): position should be long.

	* re.c (match_hash, match_equal): new methods.  [ruby-core:24748]

	* re.c (reg_match_pos, rb_reg_eqq, rb_reg_s_quote): get rid of use
	  VALUE as int.

Fri Sep  4 20:40:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (round): added declaration.  [ruby-dev:39222]

Fri Sep  4 06:15:39 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (Init_Dir): alias Dir#path to Dir#to_path.  [ruby-core:25326]

Fri Sep  4 04:49:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): fixed rdoc.  [ruby-core:25332]

Fri Sep  4 04:46:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/httpservlet/abstract.rb (do_OPTIONS): method names
	  are symbols now.  [ruby-core:24580]

Thu Sep  3 17:56:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): concat body from dstr instead of
	  nd_next.  [ruby-core:25284]

Wed Sep  2 16:49:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_gamma): get rid of direct comparison between too
	  big double and integer, with gcc on x86_64.  [ruby-core:25257]

Wed Sep  2 13:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (domain_check): simplified.

Wed Sep  2 11:32:24 2009  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_free): fix to free method table (fix memory leak).

Wed Sep  2 07:42:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/instruction.rb (RubyVM::InstructionsLoader#make_stackcaching_insns):
	  simplified.

Wed Sep  2 02:32:46 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/lib/json/common.rb (NaN): Change definition
	  of NaN to 0.0/0 for 1.8/1.9 compatibility.

Wed Sep  2 01:16:32 2009  NARUSE, Yui  <naruse@ruby-lang.org>
